Fim da segunda aula de HTML

--- a/public_html/css/estilo.css
+++ b/public_html/css/estilo.css
@@ -12,3 +12,43 @@
     background-color: red;
     color: white;
 }
+
+div {
+    border: 1px solid;
+}
+
+#container {
+    background-color: lightcoral;
+   width: 90%;    /*largura */
+   height: 900px;  /* altura */
+}
+#cabecalho {
+   background-color: lightblue; 
+   width: 100%;    /*largura */
+   height: 15%;  /* altura */
+}
+
+#conteudo {
+    width: 100%;
+    height: 60%
+}
+
+#menu_lateral {
+    background-color: darkmagenta;
+    width: 30%;
+    height: 100%;
+    float: left;
+}
+
+#conteudo_lateral {
+    background-color:cyan;
+    width: 65%;    /*largura */
+    height: 100%;  /* altura */
+    float: right;
+}
+
+#rodape {
+    background-color:blueviolet;
+    width: 100%;    /*largura */
+   height: 15%;  /* altura */
+}
